--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "pinia": "^2.1.7",
     "sass": "^1.69.5",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue-toastify": "^2.0.0-alpha.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
